syntax = "proto3";

option go_package = "pkg/security/proto/api";

package api;

message GetProcessEventParams{
    int32 TimeoutSeconds = 1;
}

message ProcessEventMessage {
    bytes Data = 1;
}

service EventMonitoringModule {
    rpc GetProcessEvents(GetProcessEventParams) returns (stream ProcessEventMessage) {}
}
